start stop button working only need to align it

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html {
   width: 100%;
 }
 
-.multi-background {
+#bg {
   width: 100vw;
   height: 100vh;
   background-color: #555;
@@ -19,10 +19,19 @@ html {
                     url('../images/1.png');
   background-size: 100vw 100%;
   background-position: 0px 0px;
-  animation: multi-background 50s linear infinite;
 }
 
-.man{
+#startbtn{
+  bottom: 5%;
+  left: 45%;
+}
+
+#stopbtn{
+  bottom: 5%;
+  left: 45%;
+}
+
+#man{
   background-image: url('../images/man.png');
   position: absolute;
   bottom: 15%;
@@ -30,7 +39,6 @@ html {
   width: 148px;
   height: 300px;
   overflow-y: hidden;
-  animation: walk 2s steps(8) infinite, forward 12s linear infinite;
 }
 
 @-webkit-keyframes walk {
@@ -51,7 +59,7 @@ html {
   }
 }
 
-@-webkit-keyframes multi-background {
+@-webkit-keyframes bg {
   from {
     background-position: 7800px 0px,
                          6500px 0px,
